just creating the project usecase-orm-patient-rdv

--- a/tp1-orm/src/main/resources/application.properties
+++ b/tp1-orm/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+# URL de la BD
+# ?createDatabaseIfNotExist=true pr créer la BD ds MySQL s'elle n existe pas.
+# Si ce param est absent, il faut créer la BD manuellement ds MySQL avant de demarrer l'app
+spring.datasource.url=jdbc:mysql://localhost:3306/db_patients?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+# create: ecraser tte la BD, puis la recreer// update: maj la BD, si les tables n'existent pas elles seront crees.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+# activer l'affichage des req SQL genere par Hibernate
+spring.jpa.show-sql=true
+# affichage formatté de SQL
+spring.jpa.properties.hibernate.format_sql=true
+# activer la page web d'admin de H2
+#spring.h2.console.enabled=true
