--- a/usecase-orm-patient-rdv/pom.xml
+++ b/usecase-orm-patient-rdv/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>me.obelmokhtar</groupId>
-    <artifactId>tp1-orm</artifactId>
+    <artifactId>usecase-orm-patient-rdv</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>tp1-orm</name>
-    <description>tp1-orm</description>
+    <name>usecase-orm-patient-rdv</name>
+    <description>usecase-orm-patient-rdv</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -21,13 +21,22 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
