temriner version final du diag class

--- a/usecase-orm-patient-rdv/src/main/resources/application.properties
+++ b/usecase-orm-patient-rdv/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:h2:mem:patient-db 
+# activer la page web d'admin de H2
+spring.h2.console.enabled=true
+# activer l'affichage des req SQL generees par Hibernate
+spring.jpa.show-sql=true 
+# create: ecraser tte la BD, puis la recreer// update: maj la BD
+spring.jpa.hibernate.ddl-auto=update
